--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^3.3.0",
     "react-helmet": "^6.0.0",
     "react-images": "^1.1.7",
     "react-photo-gallery": "^8.0.0"
