--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "caniuse-lite": "^1.0.30001257",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.9",
